--- a/.github/workflows/daily-commit.yaml
+++ b/.github/workflows/daily-commit.yaml
@@ -2,9 +2,9 @@ name: Daily Commit
 
 on:
   schedule:
-    - cron: "0 3 * * *"  # Runs daily at 3 AM UTC (Adjust as needed)
+    - cron: "30 2 * * *"  # Runs daily at 02:30 UTC
 
-  workflow_dispatch: # Allows manual triggering
+  workflow_dispatch:  # Allows manual triggering
 
 jobs:
   commit:
@@ -14,14 +14,17 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Make a dummy change (23ds2000069@ds.study.iitm.ac.in)
+      - name: Make Changes (Dummy Update)
         run: |
-          echo "Last run: $(date)" > last-run.txt
+          echo "Last run: $(date)" > last_run.txt
+
+      - name: Configure Git (23ds2000069@ds.study.iitm.ac.in)
+        run: |
+          git config --global user.name "GitHub Actions Bot"
+          git config --global user.email "23ds2000069@ds.study.iitm.ac.in"
 
       - name: Commit and Push Changes
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "23ds2000069@ds.study.iitm.ac.in"
-          git add last-run.txt
-          git commit -m "Automated commit - $(date)"
+          git add .
+          git commit -m "Daily automated commit - $(date)"
           git push
