--- a/.github/workflows/daily-commit.yaml
+++ b/.github/workflows/daily-commit.yaml
@@ -1,30 +1,15 @@
-name: Daily Commit
-
+name: Master
 on:
+  push:
+    branches:
+      - master
   schedule:
-    - cron: "30 2 * * *"  # Runs daily at 02:30 UTC
-
-  workflow_dispatch:  # Allows manual triggering
-
+    - cron: '0 8 1 * *'
 jobs:
-  commit:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: Make Changes (Dummy Update)
-        run: |
-          echo "Last run: $(date)" > last_run.txt
-
-      - name: Configure Git (23ds2000069@ds.study.iitm.ac.in)
-        run: |
-          git config --global user.name "GitHub Actions Bot"
-          git config --global user.email "23ds2000069@ds.study.iitm.ac.in"
-
-      - name: Commit and Push Changes
-        run: |
-          git add .
-          git commit -m "Daily automated commit - $(date)"
-          git push
+    - uses: actions/checkout@v1
+    - name: Running
+      run: |
+        echo "Running!"
