--- a/.github/workflows/daily-commit.yaml
+++ b/.github/workflows/daily-commit.yaml
@@ -1,15 +1,32 @@
-name: Master
+name: Daily Commit
+
 on:
-  push:
-    branches:
-      - master
   schedule:
-    - cron: '0 8 1 * *'
+    - cron: "30 2 * * *"  # Runs daily at 02:30 UTC
+
+  workflow_dispatch:  # Allows manual triggering
+
 jobs:
-  build:
+  commit:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v1
-    - name: Running
-      run: |
-        echo "Running!"
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Make Changes (Dummy Update)
+        run: |
+          echo "Last run: $(date)" > last-run.txt
+
+      - name: Configure Git (23ds2000069@ds.study.iitm.ac.in)
+        run: |
+          git config --global user.name "GitHub Actions Bot"
+          git config --global user.email "23ds2000069@ds.study.iitm.ac.in"
+
+      - name: Commit and Push Changes
+        env:
+          GH_PAT: ${{ secrets.GH_PAT }}
+        run: |
+          git add .
+          git commit -m "Automated commit - $(date)"
+          git push https://x-access-token:${GH_PAT}@github.com/simhran/23ds69.git main
